// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`determinism > pins one battle log, so a change to the rules or the RNG shows up here 1`] = `
[
  "start a",
  "ability bs1 beatmaker",
  "buff bm1 +3/+0",
  "ability bs1 shout-out",
  "buff bm3 +0/+3",
  "front am1",
  "front bm1",
  "turn 1 a",
  "bar am1>bm1 4",
  "hype a +1=1",
  "ability as1 drop-the-beat",
  "buff am1 +2/+0",
  "ability bm1 clapback",
  "diss bm1>am1 1",
  "hype b +1=1",
  "ability am1 comeback-line",
  "hype b -1=0",
  "ability am1 clapback",
  "diss am1>bm1 1",
  "hype a +1=2",
  "ability as2 breathe",
  "buff am1 +0/+4",
  "turn 2 b",
  "bar bm1>am1 6",
  "hype b +1=1",
  "ability am1 comeback-line",
  "hype b -1=0",
  "turn 3 a",
  "bar am1>bm1 4",
  "hype a +1=3",
  "choke bm1",
  "hype a +2=5",
  "front bm2",
  "ability as1 drop-the-beat",
  "buff am1 +2/+0",
  "turn 4 b",
  "bar bm2>am1 1",
  "hype b +1=1",
  "choke am1",
  "hype a -2=3",
  "hype b +2=3",
  "front am2",
  "turn 5 a",
  "bar am2>bm2 2",
  "hype a +1=4",
  "ability as1 drop-the-beat",
  "buff am2 +2/+0",
  "ability bm2 the-og",
  "buff bm3 +1/+0",
  "turn 6 b",
  "bar bm2>am2 5",
  "hype b +1=4",
  "choke am2",
  "hype a -2=2",
  "hype b +2=6",
  "front am3",
  "turn 7 a",
  "bar am3>bm2 4",
  "hype a +1=3",
  "choke bm2",
  "hype b -2=4",
  "hype a +2=5",
  "front bm3",
  "ability as1 drop-the-beat",
  "buff am3 +2/+0",
  "ability bm2 street-poet",
  "buff bm3 +2/+2",
  "turn 8 b",
  "bar bm3>am3 4",
  "hype b +1=5",
  "choke am3",
  "hype a -2=3",
  "hype b +2=7",
  "end b wipeout 1",
]
`;

exports[`every crowd vote battle > gives the same log for the same lineups and seed 1`] = `
[
  "start a",
  "ability bs1 beatmaker",
  "buff bm1 +3/+0",
  "ability bs1 shout-out",
  "buff bm3 +0/+3",
  "front am1",
  "front bm1",
  "verse 1",
  "turn 1 a",
  "bar am1>bm1 4",
  "hype a +1=1",
  "ability as1 drop-the-beat",
  "buff am1 +2/+0",
  "ability bm1 clapback",
  "diss bm1>am1 1",
  "hype b +1=1",
  "ability am1 comeback-line",
  "hype b -1=0",
  "ability am1 clapback",
  "diss am1>bm1 1",
  "hype a +1=2",
  "ability as2 breathe",
  "buff am1 +0/+4",
  "turn 2 b",
  "bar bm1>am1 6",
  "hype b +1=1",
  "ability am1 comeback-line",
  "hype b -1=0",
  "turn 3 a",
  "bar am1>bm1 4",
  "hype a +1=3",
  "choke bm1",
  "hype a +2=5",
  "front bm2",
  "ability as1 drop-the-beat",
  "buff am1 +2/+0",
  "turn 4 b",
  "bar bm2>am1 1",
  "hype b +1=1",
  "choke am1",
  "hype a -2=3",
  "hype b +2=3",
  "front am2",
  "verdict 1 a 3:3 1-0",
  "hype a -2=1",
  "hype b -2=1",
  "verse 2",
  "turn 5 a",
  "bar am2>bm2 2",
  "hype a +1=2",
  "ability as1 drop-the-beat",
  "buff am2 +2/+0",
  "ability bm2 the-og",
  "buff bm3 +1/+0",
  "turn 6 b",
  "bar bm2>am2 5",
  "hype b +1=2",
  "choke am2",
  "hype a -2=0",
  "hype b +2=4",
  "front am3",
  "turn 7 a",
  "bar am3>bm2 4",
  "hype a +1=1",
  "choke bm2",
  "hype b -2=2",
  "hype a +2=3",
  "front bm3",
  "ability as1 drop-the-beat",
  "buff am3 +2/+0",
  "ability bm2 street-poet",
  "buff bm3 +2/+2",
  "turn 8 b",
  "bar bm3>am3 4",
  "hype b +1=3",
  "choke am3",
  "hype a -2=1",
  "hype b +2=5",
  "end b wipeout 1",
]
`;
